--- a/alacritty.yml
+++ b/alacritty.yml
@@ -493,7 +493,7 @@ colors:
 shell:
   program: cmd.exe
   args:
-    - /s /k "d:/Alacritty/cmder-1.3.19/vendor/init.bat"
+    - /s /k "d:/Alacritty/cmder-dev/vendor/init.bat"
 
 # shell:
 #   program: d:/Alacritty/PowerShell-7.2.5-win-x64/pwsh.exe
@@ -899,7 +899,7 @@ key_bindings:
   #- { key: NumpadAdd,      mods: Control,                         action: IncreaseFontSize }
   #- { key: Minus,          mods: Control,                         action: DecreaseFontSize }
   #- { key: NumpadSubtract, mods: Control,                         action: DecreaseFontSize }
-  - { key: N,              mods: Control,                          action: SpawnNewInstance }
+  - { key: N,              mods: Control,                          action: CreateNewWindow  }
 
   # (Windows only)
   #- { key: Return,   mods: Alt,           action: ToggleFullscreen }
