--- a/settings/starship.toml
+++ b/settings/starship.toml
@@ -33,4 +33,7 @@ style = "bold red"
 untracked = ""
 modified = '*'
 deleted = '-'
-format = '([$ahead_behind\[$conflicted$stashed$deleted$renamed$staged$modified\]]($style) )'
+ahead = "⇡${count}"
+behind = "⇣${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+format = '([$diverged\[$conflicted$stashed$deleted$renamed$staged$modified\]]($style) )'
