change the order

--- a/settings/starship.toml
+++ b/settings/starship.toml
@@ -37,4 +37,4 @@ conflicted = 'x'
 ahead = "[\ue353${count}](bold green)"
 behind = "[\ue340${count}](bold red)"
 diverged = "[⇕\ue353${ahead_count}\ue340${behind_count}](bold yellow)"
-format = '([\[$conflicted$stashed$deleted$renamed$staged$modified\]]($style) )($ahead_behind )'
+format = '($ahead_behind )([\[$conflicted$stashed$deleted$renamed$staged$modified\]]($style) )'
