--- a/settings/alacritty.yml
+++ b/settings/alacritty.yml
@@ -150,7 +150,8 @@ bell:
 
   # Duration of the visual bell flash in milliseconds. A `duration` of `0` will
   # disable the visual bell animation.
-  duration: 50
+  # NOTE: disable this because error in remote operations (ssh, ...)
+  duration: 0
 
   # Visual bell animation color.
   color: '#800000'
