--- a/settings/alacritty.toml
+++ b/settings/alacritty.toml
@@ -76,7 +76,8 @@ style = { blinking = "Off", shape = "Block" }
 
 [font]
 size = 11.0
-normal = { family = "FuraMono Nerd Font" }
+normal = { family = "FuraMono Nerd Font", style = "Regular" }
+offset = { x = 0, y = 0 }
 
 [keyboard]
 bindings = [
