--- a/settings/alacritty.toml
+++ b/settings/alacritty.toml
@@ -76,7 +76,7 @@ style = { blinking = "Off", shape = "Block" }
 
 [font]
 size = 11.0
-normal = { family = "FuraMono Nerd Font", style = "Regular" }
+normal = { family = "FiraMono Nerd Font", style = "Regular" }
 offset = { x = 0, y = 0 }
 
 [keyboard]
@@ -96,9 +96,9 @@ save_to_clipboard = true
 
 [window]
 decorations = "full"
-dynamic_padding = false
+dynamic_padding = true
 dynamic_title = true
 opacity = 0.95
 startup_mode = "Windowed"
 title = "Alacritty"
-padding = { x = 10, y = 10}
+padding = { x = 0, y = 0}
