--- a/settings/alacritty.toml
+++ b/settings/alacritty.toml
@@ -1,5 +1,3 @@
-live_config_reload = true
-
 [bell]
 animation = "EaseOutExpo"
 color = "#800000"
@@ -102,3 +100,6 @@ opacity = 0.95
 startup_mode = "Windowed"
 title = "Alacritty"
 padding = { x = 0, y = 0}
+
+[general]
+live_config_reload = true
