--- a/settings/alacritty.toml
+++ b/settings/alacritty.toml
@@ -75,6 +75,9 @@ style = { blinking = "Off", shape = "Block" }
 [font]
 size = 12.0
 normal = { family = "FiraMono Nerd Font", style = "Regular" }
+bold = { family = "FiraMono Nerd Font", style = "Bold" }
+italic = { family = "FiraMono Nerd Font", style = "Italic" }
+bold_italic = { family = "FiraMono Nerd Font", style = "Bold Italic" }
 offset = { x = 0, y = 0 }
 
 [keyboard]
