--- a/settings/zed.settings.json
+++ b/settings/zed.settings.json
@@ -7,6 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "ui_font_family": "FiraMono Nerd Font",
   "ensure_final_newline_on_save": false,
   "format_on_save": "off",
   "terminal": {
