--- a/settings.linux/alacritty.toml
+++ b/settings.linux/alacritty.toml
@@ -1,5 +1,3 @@
-live_config_reload = true
-
 [bell]
 animation = "EaseOutExpo"
 color = "#800000"
@@ -110,3 +108,6 @@ padding = { x = 0, y = 0}
 [shell]
 program = "/usr/bin/fish"
 args = []
+
+[general]
+live_config_reload = true
