--- a/settings.mac/alacritty.toml
+++ b/settings.mac/alacritty.toml
@@ -1,5 +1,3 @@
-live_config_reload = true
-
 [bell]
 animation = "EaseOutExpo"
 color = "#800000"
@@ -75,7 +73,7 @@ vi_mode_style = "None"
 style = { blinking = "Off", shape = "Block" }
 
 [font]
-size = 13.0
+size = 16.0
 normal = { family = "FiraMono Nerd Font", style = "Regular" }
 offset = { x = 0, y = 0 }
 
@@ -102,3 +100,6 @@ opacity = 0.95
 startup_mode = "Windowed"
 title = "Alacritty"
 padding = { x = 10, y = 10}
+
+[general]
+live_config_reload = true
