fix errors in Windows

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .exvim/
 installs/
 vendor/
-clink_history*
-clink.log
 *.exe
-settings/clink_profile/
+win/clink_profile/*.txt
+win/clink_profile/*.log
+win/clink_profile/clink_history*
