--- a/mac/alacritty.toml
+++ b/mac/alacritty.toml
@@ -4,60 +4,59 @@ color = "#800000"
 duration = 0
 
 [colors.bright]
-black = "#6272a4"
-blue = "#d6acff"
-cyan = "#a4ffff"
-green = "#69ff94"
-magenta = "#ff92df"
-red = "#ff6e6e"
-white = "#ffffff"
-yellow = "#ffffa5"
+black = "#5c6370"
+blue = "#61afef"
+cyan = "#56b6c2"
+green = "#98c379"
+magenta = "#c678dd"
+red = "#e06c75"
+white = "#dcdfe4"
+yellow = "#e5c07b"
 
 [colors.cursor]
 cursor = "CellForeground"
 text = "CellBackground"
 
 [colors.footer_bar]
-background = "#282a36"
-foreground = "#f8f8f2"
+background = "#282c34"
+foreground = "#dcdfe4"
 
 [colors.hints.end]
-background = "#282a36"
-foreground = "#f1fa8c"
+background = "#282c34"
+foreground = "#e5c07b"
 
 [colors.hints.start]
-background = "#f1fa8c"
-foreground = "#282a36"
+background = "#e5c07b"
+foreground = "#282c34"
 
 [colors.line_indicator]
 background = "None"
 foreground = "None"
 
 [colors.normal]
-black = "#21222c"
-blue = "#bd93f9"
-cyan = "#8be9fd"
-green = "#50fa7b"
-magenta = "#ff79c6"
-red = "#ff5555"
-white = "#f8f8f2"
-yellow = "#f1fa8c"
+black = "#282c34"
+blue = "#61afef"
+cyan = "#56b6c2"
+green = "#98c379"
+magenta = "#c678dd"
+red = "#e06c75"
+white = "#dcdfe4"
+yellow = "#e5c07b"
 
 [colors.primary]
-background = "#282a36"
-bright_foreground = "#ffffff"
-foreground = "#f8f8f2"
+background = "#282c34"
+foreground = "#dcdfe4"
 
 [colors.search.focused_match]
-background = "#ffb86c"
-foreground = "#44475a"
+background = "#e5c07b"
+foreground = "#282c34"
 
 [colors.search.matches]
-background = "#50fa7b"
-foreground = "#44475a"
+background = "#98c379"
+foreground = "#282c34"
 
 [colors.selection]
-background = "#44475a"
+background = "#282c34"
 text = "CellForeground"
 
 [colors.vi_mode_cursor]
@@ -74,7 +73,10 @@ style = { blinking = "Off", shape = "Block" }
 
 [font]
 size = 16.0
-normal = { family = "FiraMono Nerd Font", style = "Regular" }
+normal = { family = "FiraMono Nerd Font", style = "Medium" }
+bold = { family = "FiraMono Nerd Font", style = "Bold" }
+italic = { family = "FiraMono Nerd Font", style = "Italic" }
+bold_italic = { family = "FiraMono Nerd Font", style = "Bold Italic" }
 offset = { x = 0, y = 0 }
 
 [keyboard]
